--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
     "vue-socket.io": "^2.1.0",
-    "vue-touch": "^2.0.0-beta.4"
+    "vue-touch": "^2.0.0-beta.4",
+    "vuex": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
